<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/face_recognition"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/result"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/original"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/original"
        android:text="@string/test"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/originalImage"
        android:layout_width="180dp"
        android:layout_height="300dp"
        android:layout_below="@+id/original"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/r"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/testImage"
        android:layout_width="180dp"
        android:layout_height="300dp"
        android:layout_below="@+id/test"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/r"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_verified_24"
        android:text="@string/verify"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:text="@string/morpheus_softwares"
        android:textSize="14sp"
        android:textStyle="italic" />

</RelativeLayout>